wavelandDev/force-app/main/default/objects/PayOrLogic__c/PayOrLogic__c.object-meta.xml
<CustomObject>
    <label>Pay Or Logic</label>
    <nameField>
        <displayFormat>PL-{0000000000}</displayFormat>
        <label>Pay Or Logic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Or Logic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>