wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/ApplicantId__c.field-meta.xml
<CustomField>
    <fullName>ApplicantId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApplicantId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>