wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>