wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorAddress1__c.field-meta.xml
<CustomField>
    <fullName>GuarantorAddress1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>