wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorApplicantId__c.field-meta.xml
<CustomField>
    <fullName>GuarantorApplicantId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor ApplicantId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>