wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorCity__c.field-meta.xml
<CustomField>
    <fullName>GuarantorCity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>