wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorDOB__c.field-meta.xml
<CustomField>
    <fullName>GuarantorDOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>