wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorFirstname__c.field-meta.xml
<CustomField>
    <fullName>GuarantorFirstname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>