wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorGender__c.field-meta.xml
<CustomField>
    <fullName>GuarantorGender__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GuarantorGender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>