wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorLastname__c.field-meta.xml
<CustomField>
    <fullName>GuarantorLastname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GuarantorLastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>