wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorSSN__c.field-meta.xml
<CustomField>
    <fullName>GuarantorSSN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>