wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorState__c.field-meta.xml
<CustomField>
    <fullName>GuarantorState__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>