wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/GuarantorZip__c.field-meta.xml
<CustomField>
    <fullName>GuarantorZip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>