wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/InsuranceFinderStatus__c.field-meta.xml
<CustomField>
    <fullName>InsuranceFinderStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Finder Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>