wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/Lastname__c.field-meta.xml
<CustomField>
    <fullName>Lastname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>