wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pay Or Logic</relationshipLabel>
    <relationshipName>PayOrLogic</relationshipName>
    <type>Lookup</type>
</CustomField>