wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/PatientProcessType__c.field-meta.xml
<CustomField>
    <fullName>PatientProcessType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PatientProcessType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>