wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ResponseDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>