wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/ServiceBeginDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceBeginDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ServiceBeginDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>