wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/ServiceEndDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceEndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ServiceEndDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>