wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/TechnicalExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>TechnicalExceptionMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TechnicalExceptionMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>