wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/TotalCharges__c.field-meta.xml
<CustomField>
    <fullName>TotalCharges__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TotalCharges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>