wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>TransactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>