wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/TransactionTracker__c.field-meta.xml
<CustomField>
    <fullName>TransactionTracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Tracker</label>
    <referenceTo>TransactionTracker__c</referenceTo>
    <relationshipLabel>Pay Or Logic</relationshipLabel>
    <relationshipName>Pay_Or_Logic</relationshipName>
    <type>Lookup</type>
</CustomField>