wavelandDev/force-app/main/default/objects/PayOrLogic__c/fields/VisitNumber__c.field-meta.xml
<CustomField>
    <fullName>VisitNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VisitNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>